
noinst_LTLIBRARIES = libcore.la
libcore_la_SOURCES = \
  debug/breakpoint.c \
  debug/gdb.c \
  debug/string.c \
  mm/heap.c \
  mm/phys.c \
  mm/virt.c \
  syscall/mm/memory.c \
  syscall/mm/shared.c \
  syscall/task/process.c \
  syscall/task/thread.c \
  syscall/dummy.c \
  syscall/init.c \
  syscall/interrupt.c \
  syscall/message.c \
  task/lock.c \
  task/process.c \
  task/queue.c \
  task/stack.c \
  task/thread.c \
  bss.c \
  cpu.c \
  elf.c \
  event.c \
  initrd.c \
  interrupt.c \
  main.c \
  panic.c
