
SUBDIRS = ${subarch_subdir}

DIST_SUBDIRS = v6 v7 v8

noinst_LTLIBRARIES = libarm.la
libarm_la_SOURCES = \
  mm/virt.c \
  syscall/io/acquire.c \
  syscall/io/check.c \
  syscall/io/raise.c \
  syscall/io/release.c \
  arch.c \
  delay.c \
  elf.c \
  fdt.S \
  firmware.c \
  initrd.c \
  interrupt.c \
  io.c \
  stack.c \
  yield.c
