
noinst_LTLIBRARIES = libcollection.la
libcollection_la_SOURCES = \
  avl/balance.c \
  avl/create.c \
  avl/destroy.c \
  avl/find.c \
  avl/insert.c \
  avl/max.c \
  avl/min.c \
  avl/prepare.c \
  avl/print.c \
  avl/remove.c \
  list/construct.c \
  list/destruct.c \
  list/empty.c \
  list/lookup.c \
  list/node_create.c \
  list/peek.c \
  list/pop.c \
  list/print.c \
  list/push.c \
  list/remove.c
